# canopy_client

./: .travis.yml  CMakeLists.txt  README.md  canopy_client_install.sh  chrony_canopy_client.conf  chrony_canopy_client.service  package.xml  requirements.txt
docker/: Dockerfile
docs/: communication_api.md
launch/: bar.launch  example.launch  example.launch~  example_paas.launch  face_detection_paas_demo.launch  foo.launch  foo_bench.launch  multi_car.launch  server.launch  tf_test.launch  tf_test_receive.launch  video_chat_demo.launch
launch/test/: bar.launch  foo.launch  test.launch
scripts/: run_server.py
src/: client_node.py  connection.py  connection_bench.py  publishermanager.py  receiver.py  sender.py
src/client/: client_node.py  connection.py  heart.py  node.py  publishermanager.py  ws.py
src/jammi/: __init__.py  heart.py  nameserver.py
src/server/: __init__.py  common.py  connection.py  server_node.py  ws.py
tests/: heart_test.py  ns_test.py  ws_test.py
